# goit-pythonweb-hw-08

./: .gitignore
hw08/: README.md  alembic.ini  pyproject.toml
hw08/alembic/versions/: d2d7d2a58581_create_initial_tables.py
hw08/src/: schemas.py
hw08/src/conf/: config.py
hw08/src/repository/: contacts.py
